# libArcus

./: .gitignore  CMakeLists.txt  conanfile.py
cmake/: FindSIP.cmake  Findsip.cmake  SIPMacros.cmake  pyproject.toml.in  sip-generate.py
examples/: CMakeLists.txt  example.cpp
include/Arcus/: Error.h  Socket.h  SocketListener.h
python/: Error.sip  Socket.sip  SocketListener.sip  Types.sip
src/: Error.cpp  Socket.cpp  Socket_p.h
test_package/: CMakeLists.txt  test.cpp
